[tool.poetry]
name = "criptam"
version = "1.0b3"
description = "iOS firmware key decrypter"
authors = ["m1stadev <adamhamdi31@gmail.com>"]
maintainers = ["m1stadev <adamhamdi31@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/m1stadev/Criptam"
keywords = ["ios", "jailbreak", "iboot", "img4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities"
]
packages = [
    { include = "criptam" }
]

[tool.poetry.scripts]
criptam = "criptam.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
ipwndfu = "~2.0.0b5"
kimg4 = "^0.1.1"
mwclient = "^0.10.1"
pyusb = "^1.2.1"
remotezip = "^0.9.3"
requests = "^2.27.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/m1stadev/Criptam/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
